:construction: more emoji visibility fixes (autocompleter)

--- a/discord-inspired-bits-dark.user.css
+++ b/discord-inspired-bits-dark.user.css
@@ -141,7 +141,11 @@
 	}
 	/* Improve visibility of chat area emoji and emoji-picker emoji */
 	[alt=":water_buffalo:"], [alt=":footprints:"], [slt=":feet:"],
-	/* alt images above and style background-position/background-size below */
+	/* alt images above and img src below */
+	img[src*="7f113473a29d9c7b7a954e669db5b167.svg"],
+	img[src*="56950b28b0de71b80cdb2fdb74affb03.svg"],
+	img[src*="35e06b64acba7714e47cb907f1a51443.svg"],
+	/* img src above and style background-position/background-size below */
 	[style*="background-position: -814px -88px; background-size: 924px 704px;"],
 	[style*="background-position: -44px -66px; background-size: 924px 704px;"],
 	[style*="background-position: -352px -110px; background-size: 924px 704px;"] {
@@ -155,7 +159,32 @@
 	[alt=":microphone:"], [alt=":headphones:"], [alt=":musical_score:"],
 	[alt=":slot_machine:"], [alt=":bowling:"], [alt=":joystick:"],
 	[alt=":vhs:"],
-	/* alt images above and style background-position/background-size below */
+	/* alt images above and img src below */
+	img[src*="42696bf24081bd55a03e15d4e4cc084a.svg"],
+	img[src*="de65a7626f89403e26eed5c12e05fddf.svg"],
+	img[src*="b4351e95f4ee4ba1ad225b996976a42b.svg"],
+	img[src*="e52382056f97f305e32d8f14aa557526.svg"],
+	img[src*="30031f3c30951eed996e7bacdbbfb61f.svg"],
+	img[src*="a3fdff4442a1292282f41fbfefab4c45.svg"],
+	img[src*="7723ee55f259edfcc5bd5cb5d162bf3e.svg"],
+	img[src*="dd833e9a6b27f767eb7002e613047d03.svg"],
+	img[src*="cec604bb59b00a2ef838c1c0bf34bc1d.svg"],
+	img[src*="e11f01ddc5cb675d9a36c52f5850cb92.svg"],
+	img[src*="b8c564524314f606251429fdd96d6d4c.svg"],
+	img[src*="183718e983ac8ed0bc00c0c485ee8d7e.svg"],
+	img[src*="a307f008c0df67604bf9d07f4c11f6c2.svg"],
+	img[src*="d88d46379fae148966f07b4a079528df.svg"],
+	img[src*="00e8fe627e9bd3cedc9c07f5640b654c.svg"],
+	img[src*="2b74c0c2b1a7083a3d8215bcaf023799.svg"],
+	img[src*="1cbba79bb198dd09c5b9b6cc0a6c7ddf.svg"],
+	img[src*="47535de9ad642a6045b1fd017b21aed5.svg"],
+	img[src*="5229116797b54a6ce886b9517291aa0f.svg"],
+	img[src*="c78b52229dc2aad445fd091453f4c75d.svg"],
+	img[src*="e6ec28237dfa28af53d648bdec0a3d0d.svg"],
+	img[src*="242bfc0589b06e155df9b58b6dcd73e9.svg"],
+	img[src*="536c2c45ade326ef4197eb48c75cff6a.svg"],
+	img[src*="cb5fc2bda212a864f47e6724549c9be6.svg"],
+	/* img src above and style background-position/background-size below */
 	[style*="background-position: -462px -220px; background-size: 924px 704px;"],
 	[style*="background-position: -374px -154px; background-size: 924px 704px;"],
 	[style*="background-position: -880px -44px; background-size: 924px 704px;"],
@@ -188,14 +217,51 @@
 	[alt=":curly_loop:"], [alt=":heavy_check_mark:"], [alt=":heavy_plus_sign:"],
 	[alt=":heavy_minus_sign:"], [alt=":heavy_division_sign:"],
 	[alt=":heavy_multiplication_x:"], [alt=":heavy_dollar_sign:"],
-	[alt=":currency_exchange:"], [alt=":end:"], [alt=":back:"],
-	[alt=":on:"], [alt=":top:"], [alt=":soon:"], [alt=":black_circle:"],
+	[alt=":currency_exchange:"], [alt=":end:"], [alt=":back:"], [alt=":on:"],
+	[alt=":top:"], [alt=":soon:"], [alt=":black_circle:"],
 	[alt=":black_small_square:"], [alt=":black_large_square:"],
 	[alt=":black_medium_square:"], [alt=":black_medium_small_square:"],
 	[alt=":spades:"], [alt=":clubs:"], [alt=":black_heart:"],
 	[alt=":telephone_receiver:"], [alt=":video_game:"], [alt=":video_camera:"],
-	[alt=":movie_camera:"], [alt=":projector:"],
-	/* alt images above and style background-position/background-size below */
+	[alt=":movie_camera:"], [alt=":projector:"], [alt=":black_square_button:"],
+	/* alt images above and img src below */
+	img[src*="1223c2e358973af4766acf976e941520.svg"],
+	img[src*="cb3eea8759d62489b21ccd3ee913c1c8.svg"],
+	img[src*="6fd0da46c7a400150ac09ba4a456a1f3.svg"],
+	img[src*="257c0cd89a832bbec1dd24f4ce2551fb.svg"],
+	img[src*="0460f909ad7af026badfc426a7e32f11.svg"],
+	img[src*="58e11980fae4c72a9625a2f531bbc4e4.svg"],
+	img[src*="0732c78b1ca3eead19f00352190bd5f6.svg"],
+	img[src*="deb1db01d54ee99ef50ceccc9aa79bfd.svg"],
+	img[src*="be73eca7ff2e6dd30b69a43974a19164.svg"],
+	img[src*="c4c6f3a5f024d772b5164605db9d431b.svg"],
+	img[src*="13262ca66be5da2c98c6daa8bed7353a.svg"],
+	img[src*="8502696d0b3ebe3eceb24c13888ea623.svg"],
+	img[src*="c4c6f3a5f024d772b5164605db9d431b.svg"],
+	img[src*="3d0695990d2375dbae86b87bf5205502.svg"],
+	img[src*="ad7398486e336cf17b49bfe4fad446b6.svg"],
+	img[src*="0c37ee07aabe19072b03afdf299ab7a6.svg"],
+	img[src*="a65d35e1714c54139d79c90a2126acdd.svg"],
+	img[src*="4162176664cb7ec52ed19754b6818672.svg"],
+	img[src*="1d1fc4f2a7b7b936011a281da94b3652.svg"],
+	img[src*="68eaf52110e1feeaf4eeabbb903b652d.svg"],
+	img[src*="43f3d80150abccba31df3e32ea4b3cec.svg"],
+	img[src*="4ca85cc4e104c1522ab1fb7b0eb90c3c.svg"],
+	img[src*="2ffa76c4b99ee4ed1cce07e2ea6eab7b.svg"],
+	img[src*="8dcca2877f51849a159035186bf93dff.svg"],
+	img[src*="90afb3e43c37af013870d5b1f530fb8b.svg"],
+	img[src*="cf093ef298428cb03a9627721dd8ecbc.svg"],
+	img[src*="634cc490e36cdb8b29c200f23f7b2f05.svg"],
+	img[src*="7b6619d2887c4129dee97040e2db0db6.svg"],
+	img[src*="0fa5cea503e2cecc5dfe0d5eff8d2126.svg"],
+	img[src*="9e62a2acc00cd50132c7e09acf4671ff.svg"],
+	img[src*="2d6a964ec20df9bf319d7858ed43bf75.svg"],
+	img[src*="7d600babcd1bddfd7a7d35acc1ed4cd3.svg"],
+	img[src*="169565d0b5f43d2c5da4dd26bb54b160.svg"],
+	img[src*="8f58e04ab1a6dd3c9798877912c2cb93.svg"],
+	img[src*="dd21835e0b93364676fce48d9e81c609.svg"],
+	img[src*="5d15d81bc39f310bfa589fc4276c6d49.svg"],
+	/* img src above and style background-position/background-size below */
 	[style*="background-position: -154px -44px; background-size: 924px 704px;"],
 	[style*="background-position: -176px -44px; background-size: 924px 704px;"],
 	[style*="background-position: -198px -44px; background-size: 924px 704px;"],
@@ -232,7 +298,8 @@
 	[style*="background-position: -440px -220px; background-size: 924px 704px;"],
 	[style*="background-position: -66px -308px; background-size: 924px 704px;"],
 	[style*="background-position: -88px -308px; background-size: 924px 704px;"],
-	[style*="background-position: -110px -308px; background-size: 924px 704px;"] {
+	[style*="background-position: -110px -308px; background-size: 924px 704px;"],
+	[style*="background-position: -198px -506px; background-size: 924px 704px;"] {
 		filter: invert(1) brightness(80%) hue-rotate(180deg) !important;
 	}
 }
